# nextscreen

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example_dataset.csv
nextscreen/: __init__.py  app.py
nextscreen/data/: __init__.py  loader.py
nextscreen/features/: __init__.py  ard_gp.py  bootstrap.py  consensus.py  correlations.py  lasso.py  pca.py  random_forest.py  shap_analysis.py
nextscreen/interpretation/: __init__.py  narrator.py
nextscreen/nextorch_integration/: __init__.py  handoff.py
nextscreen/reporting/: __init__.py  report.py
nextscreen/utils/: __init__.py  plotting.py
tests/: test_consensus.py  test_features.py  test_integration.py  test_loader.py  test_narrator.py
